package app.interfaces;

public interface Food {

    public  void numeFood(String nume);
    public  void pretFood(double pret);
    public  void inventarFood(int inventar);
}
