package app.interfaces;

public interface Reduceri {

    public static void reducere(double val) {

    }
}
